start of the plot part

--- a/NMDA conductance and cortical oscillations in schizophrenia/model.ipynb
+++ b/NMDA conductance and cortical oscillations in schizophrenia/model.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 27,
    "id": "b3d7aabd",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 28,
    "id": "fe5fa160",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 29,
    "id": "0b8c8c81",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "29e15c63",
    "metadata": {},
    "outputs": [],
@@ -115,6 +115,7 @@
     "VT_E = -45.0 * mV\n",
     "VT_I = -30.0 * mV\n",
     "VR   = -52.0 * mV\n",
+    "V_peak = 20 * mV\n",
     "\n",
     "\n",
     "# Adaptation (E only)\n",
@@ -217,17 +218,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 43,
    "id": "3a16608b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def network(alpha_EI, dt, rng_seed=0):\n",
+    "def network(alpha_EI, dt, rng_seed=0,gNI_mS_cm2=0.008):\n",
+    "    global gNI  # because eqs_I refers to the Python symbol gNI\n",
     "    start_scope()\n",
     "    np.random.seed(rng_seed)\n",
     "    seed(rng_seed) \n",
+    "    \n",
+    "    gNI = gNI_mS_cm2 * MS_PER_CM2_TO_SI\n",
+    "\n",
     "    defaultclock.dt = dt * ms\n",
     "    method = \"euler\"\n",
+    "    \n",
     "\n",
     "    E = NeuronGroup(\n",
     "        N_E, eqs_E,\n",
@@ -328,6 +334,8 @@
     "\n",
     "    return dict(alpha_EI=alpha_EI, dt=float(dt/ms),\n",
     "                rate_E_ss=float(rate_E_ss), rate_I_ss=float(rate_I_ss),\n",
+    "                I_app_E=float(E.I_app[0] / (amp/meter**2)),\n",
+    "                I_app_I=float(I.I_app[0] / (amp/meter**2)),\n",
     "                vmax0_mV=vmax0_mV)\n",
     "    "
    ]
@@ -361,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 32,
    "id": "8a3eecb8",
    "metadata": {},
    "outputs": [
@@ -398,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 33,
    "id": "b7d73d01",
    "metadata": {},
    "outputs": [
@@ -462,6 +470,48 @@
     "Purpose: \n",
     "- To model NMDA hypofunction versus hyperfunction on FSIs.\n",
     "- To test for non-monotonic (inverted-U) effects on gamma power"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "f7c72a49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0 85.10277777777777 7.055555555555555 0.005\n",
+      "0.006 64.89722222222221 76.12222222222222 0.005\n",
+      "0.012 53.55277777777778 114.7 0.005\n",
+      "0.018 46.02777777777777 140.04444444444442 0.005\n",
+      "0.024 40.519444444444446 158.13333333333333 0.005\n",
+      "0.054 25.819444444444443 204.82222222222222 0.005\n"
+     ]
+    }
+   ],
+   "source": [
+    "I_app_I = 0.5 * UA_PER_CM2_TO_SI \n",
+    "\n",
+    "for g in [0.0, 0.006, 0.012, 0.018, 0.024, 0.054]:\n",
+    "    \n",
+    "    out = network(alpha_EI=0.15, dt=0.02, rng_seed=4, gNI_mS_cm2=g)\n",
+    "    print(g, out[\"rate_E_ss\"], out[\"rate_I_ss\"], out[\"I_app_I\"])\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40ef22a9",
+   "metadata": {},
+   "source": [
+    "### Effect of NMDA conductance onto inhibitory neurons (`gNI`)\n",
+    "\n",
+    "Increasing the NMDA conductance from excitatory to inhibitory neurons (`gNI`) produces a systematic shift in network balance. As `gNI` increases, inhibitory neurons receive stronger and more persistent excitation, leading to a marked increase in inhibitory firing rates. The resulting feedback inhibition progressively suppresses excitatory firing.\n",
+    "\n",
+    "For very small `gNI`, inhibition is weak and excitatory neurons dominate the network dynamics. For large `gNI`, inhibition becomes overly strong and suppresses excitatory activity. The most relevant dynamical regime lies at intermediate `gNI`, where both populations are active and inhibitory firing rates exceed excitatory rates. This regime corresponds to the parameter range in which the paper reports robust gamma-band oscillations.\n"
    ]
   }
  ],
