--- a/NMDA conductance and cortical oscillations in schizophrenia/run_model.ipynb
+++ b/NMDA conductance and cortical oscillations in schizophrenia/run_model.ipynb
@@ -29,315 +29,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "250f3603",
+   "id": "201499a7",
    "metadata": {},
    "source": [
-    "## model initialization"
+    "To avoid contamination from initialization artifacts, firing rates were computed after discarding an initial transient period (first 200 ms). This ensures that all reported quantities reflect steady-state network dynamics rather than nonstationary behavior induced by arbitrary initial conditions.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "b3d7aabd",
+   "execution_count": 5,
+   "id": "0d5b11fb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "from brian2 import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "fe5fa160",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# Unit conversions (paper uses per cm^2; Brian2 wants SI per m^2)\n",
-    "\n",
-    "# 1 cm^2 = 1e-4 m^2\n",
-    "# so X / cm^2  ==  X * 1e4 / m^2\n",
-    "#\n",
-    "# 1 uA/cm^2 = 1e-6 A * 1e4 / m^2 = 1e-2 A/m^2\n",
-    "# 1 mS/cm^2 = 1e-3 S * 1e4 / m^2 = 10 S/m^2\n",
-    "# 1 uF/cm^2 = 1e-6 F * 1e4 / m^2 = 1e-2 F/m^2\n",
-    "UA_PER_CM2_TO_SI = 1e-2 * amp / meter**2\n",
-    "MS_PER_CM2_TO_SI = 10.0 * siemens / meter**2\n",
-    "UF_PER_CM2_TO_SI = 1e-2 * farad / meter**2\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "235843e2",
-   "metadata": {},
-   "source": [
-    "#### Network size + connectivity"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "0b8c8c81",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "N_E, N_I = 200, 50\n",
-    "P_EE, P_EI, P_IE, P_II = 0.10, 0.40, 0.50, 0.60"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "234dba41",
-   "metadata": {},
-   "source": [
-    "#### parameters and equations "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "29e15c63",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Capacitance\n",
-    "C_E = 1.0 * UF_PER_CM2_TO_SI\n",
-    "C_I = 1.0 * UF_PER_CM2_TO_SI\n",
-    "\n",
-    "# Leak\n",
-    "EL  = -65.0 * mV\n",
-    "gL_E = 0.05 * MS_PER_CM2_TO_SI\n",
-    "gL_I = 0.50 * MS_PER_CM2_TO_SI\n",
-    "\n",
-    "# Thresholds / reset\n",
-    "VT_E = -45.0 * mV\n",
-    "VT_I = -30.0 * mV\n",
-    "VR   = -52.0 * mV\n",
-    "V_peak = 20 * mV\n",
-    "\n",
-    "\n",
-    "# Adaptation (E only)\n",
-    "a = 0.01 / ms          # paper form uses fixed decay\n",
-    "d = 0.2 * UA_PER_CM2_TO_SI\n",
-    "\n",
-    "# Synaptic time constants\n",
-    "tau_nmda = 80.0 * ms\n",
-    "tau_ampa_EE = 3.0 * ms\n",
-    "tau_ampa_EI = 1.0 * ms\n",
-    "tau_gaba = 2.0 * ms\n",
-    "\n",
-    "# Reversal potentials\n",
-    "E_AMPA = 0.0 * mV\n",
-    "E_NMDA = 0.0 * mV\n",
-    "E_GABA = -70.0 * mV\n",
-    "\n",
-    "# Synaptic conductances (Table 2)\n",
-    "\n",
-    "gNE = 0.008 * MS_PER_CM2_TO_SI\n",
-    "gNI = 0.008 * MS_PER_CM2_TO_SI\n",
-    "gEE = 0.10  * MS_PER_CM2_TO_SI\n",
-    "gEI = 0.08  * MS_PER_CM2_TO_SI\n",
-    "gIE = 0.25  * MS_PER_CM2_TO_SI\n",
-    "gII = 0.10  * MS_PER_CM2_TO_SI\n",
-    "\n",
-    "# Magnesium concentration\n",
-    "Mg = 1.0\n",
-    "\n",
-    "# External tonic drive\n",
-    "I_app_E = 4.0 * UA_PER_CM2_TO_SI\n",
-    "I_app_I = 0.0 * UA_PER_CM2_TO_SI\n",
-    "\n",
-    "eqs_E = \"\"\"\n",
-    "# Intrinsic quadratic term (as in the paper's QIF-like formulation)\n",
-    "I_intrinsic = gL * (v - EL) * (v - VT) / (VT - EL) : amp/meter**2\n",
-    "I_adapt = z : amp/meter**2\n",
-    "\n",
-    "# NMDA magnesium block\n",
-    "B = 1.0 / (1.0 + (Mg * exp(-0.062 * (v/mV)) / 3.57)) : 1\n",
-    "\n",
-    "# Synaptic currents: E receives from E (AMPA+NMDA) and from I (GABA)\n",
-    "I_ampa = gEE * sA_EE * (v - E_AMPA) : amp/meter**2\n",
-    "I_nmda = gNE * sN_EE * B * (v - E_NMDA) : amp/meter**2\n",
-    "I_gaba = gIE * sG_IE * (v - E_GABA) : amp/meter**2\n",
-    "I_syn = I_ampa + I_nmda + I_gaba : amp/meter**2\n",
-    "\n",
-    "# Membrane\n",
-    "dv/dt = (I_app + I_intrinsic - I_adapt - I_syn) / C : volt\n",
-    "\n",
-    "# Adaptation\n",
-    "dz/dt = -a * z : amp/meter**2\n",
-    "\n",
-    "# Synaptic gate decays\n",
-    "dsA_EE/dt = -sA_EE / tau_ampa_EE : 1\n",
-    "dsN_EE/dt = -sN_EE / tau_nmda : 1\n",
-    "dsG_IE/dt = -sG_IE / tau_gaba : 1\n",
-    "\n",
-    "# Per-neuron parameters / inputs\n",
-    "I_app : amp/meter**2\n",
-    "C : farad/meter**2\n",
-    "gL : siemens/meter**2\n",
-    "VT : volt\n",
-    "\"\"\"\n",
-    "\n",
-    "eqs_I = \"\"\"\n",
-    "I_intrinsic = gL * (v - EL) * (v - VT) / (VT - EL) : amp/meter**2\n",
-    "I_adapt = 0*amp/meter**2 : amp/meter**2  # no adaptation current in I\n",
-    "\n",
-    "B = 1.0 / (1.0 + (Mg * exp(-0.062 * (v/mV)) / 3.57)) : 1\n",
-    "\n",
-    "# Synaptic currents: I receives from E (AMPA+NMDA) and from I (GABA)\n",
-    "I_ampa = gEI * sA_EI * (v - E_AMPA) : amp/meter**2\n",
-    "I_nmda = gNI * sN_EI * B * (v - E_NMDA) : amp/meter**2\n",
-    "I_gaba = gII * sG_II * (v - E_GABA) : amp/meter**2\n",
-    "I_syn = I_ampa + I_nmda + I_gaba : amp/meter**2\n",
-    "\n",
-    "dv/dt = (I_app + I_intrinsic - I_adapt - I_syn) / C : volt\n",
-    "\n",
-    "# Gate decays\n",
-    "dsA_EI/dt = -sA_EI / tau_ampa_EI : 1\n",
-    "dsN_EI/dt = -sN_EI / tau_nmda : 1\n",
-    "dsG_II/dt = -sG_II / tau_gaba : 1\n",
-    "\n",
-    "I_app : amp/meter**2\n",
-    "C : farad/meter**2\n",
-    "gL : siemens/meter**2\n",
-    "VT : volt\n",
-    "\"\"\"\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e81f8474",
-   "metadata": {},
-   "source": [
-    "#### population and synapse"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "id": "3a16608b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def network(alpha_EI, dt, rng_seed=0,gNI_mS_cm2=0.008):\n",
-    "    global gNI  # because eqs_I refers to the Python symbol gNI\n",
-    "    start_scope()\n",
-    "    np.random.seed(rng_seed)\n",
-    "    seed(rng_seed) \n",
-    "    \n",
-    "    gNI = gNI_mS_cm2 * MS_PER_CM2_TO_SI\n",
-    "\n",
-    "    defaultclock.dt = dt * ms\n",
-    "    method = \"euler\"\n",
-    "    \n",
-    "\n",
-    "    E = NeuronGroup(\n",
-    "        N_E, eqs_E,\n",
-    "        threshold=\"v >= V_peak\",\n",
-    "        reset=\"v = VR; z += d\",\n",
-    "        method=method,\n",
-    "        name=\"E\"\n",
-    "    )\n",
-    "\n",
-    "    I = NeuronGroup(\n",
-    "        N_I, eqs_I,\n",
-    "        threshold=\"v >= V_peak\",\n",
-    "        reset=\"v = VR\",          # no adaptation jump in I\n",
-    "        method=method,\n",
-    "        name=\"I\"\n",
-    "    )\n",
-    "\n",
-    "    # Set per-population intrinsic parameters\n",
-    "    E.C = C_E\n",
-    "    E.gL = gL_E\n",
-    "    E.VT = VT_E\n",
-    "    E.I_app = I_app_E\n",
-    "\n",
-    "    I.C = C_I\n",
-    "    I.gL = gL_I\n",
-    "    I.VT = VT_I\n",
-    "    I.I_app = I_app_I\n",
-    "\n",
-    "    # Initial conditions\n",
-    "    E.v = EL + 1*mV*randn(N_E)\n",
-    "    E.z = 0.0 * amp/meter**2\n",
-    "    E.sA_EE = 0.0\n",
-    "    E.sN_EE = 0.0\n",
-    "    E.sG_IE = 0.0\n",
-    "\n",
-    "    I.v = EL + 1*mV*randn(N_I)\n",
-    "    I.sA_EI = 0.0\n",
-    "    I.sN_EI = 0.0\n",
-    "    I.sG_II = 0.0\n",
-    "\n",
-    "    # Weights (dimensionless gate jumps)\n",
-    "    K_EE = P_EE * (N_E - 1)\n",
-    "    K_EI = P_EI * N_E\n",
-    "    K_IE = P_IE * N_I\n",
-    "    K_II = P_II * (N_I - 1)\n",
-    "\n",
-    "    wA_EE = 1.0 / K_EE\n",
-    "    wN_EE = 1.0 / K_EE\n",
-    "    wA_EI = 1.0 / K_EI\n",
-    "    wN_EI = 1.0 / K_EI\n",
-    "    wG_IE = 1.0 / K_IE\n",
-    "    wG_II = 1.0 / K_II\n",
-    "\n",
-    "    # E -> E (paired AMPA+NMDA on same edges)\n",
-    "    S_EE = Synapses(E, E, model=\"wA:1\\nwN:1\", on_pre=\"sA_EE_post += wA; sN_EE_post += wN\")\n",
-    "    S_EE.connect(condition='i != j', p=P_EE)\n",
-    "    S_EE.wA = wA_EE\n",
-    "    S_EE.wN = wN_EE\n",
-    "\n",
-    "    # E -> I\n",
-    "    S_EI = Synapses(E, I, model=\"wA:1\\nwN:1\", on_pre=\"sA_EI_post += wA; sN_EI_post += wN\")\n",
-    "    S_EI.connect(p=P_EI)\n",
-    "\n",
-    "\n",
-    "    S_EI.wA = alpha_EI\n",
-    "    S_EI.wN = alpha_EI\n",
-    "\n",
-    "    # I -> E\n",
-    "    S_IE = Synapses(I, E, model=\"wG:1\", on_pre=\"sG_IE_post += wG\")\n",
-    "    S_IE.connect(p=P_IE)\n",
-    "    S_IE.wG = wG_IE\n",
-    "\n",
-    "    # I -> I\n",
-    "    S_II = Synapses(I, I, model=\"wG:1\", on_pre=\"sG_II_post += wG\")\n",
-    "    S_II.connect(condition='i != j', p=P_II)\n",
-    "    S_II.wG = wG_II\n",
-    "\n",
-    "    for S in (S_EE, S_EI, S_IE, S_II):\n",
-    "        S.delay = 0.5 * ms\n",
-    "\n",
-    "\n",
-    "    # ----------------------------\n",
-    "    # Recording\n",
-    "    # ----------------------------\n",
-    "    spE = SpikeMonitor(E)\n",
-    "    spI = SpikeMonitor(I)\n",
-    "\n",
-    "    vE = StateMonitor(E, \"v\", record=range(5))\n",
-    "    vI = StateMonitor(I, \"v\", record=range(5))\n",
-    "\n",
-    "    T = 2000*ms\n",
-    "    run(T)\n",
-    "\n",
-    "    t0 = 200*ms\n",
-    "    rate_E_ss = np.sum(spE.t >= t0) / ((T - t0)/second) / N_E\n",
-    "    rate_I_ss = np.sum(spI.t >= t0) / ((T - t0)/second) / N_I\n",
-    "    vmax0_mV = float(np.max(vE.v[0] / mV))\n",
-    "\n",
-    "    return dict(alpha_EI=alpha_EI, dt=float(dt/ms),\n",
-    "                rate_E_ss=float(rate_E_ss), rate_I_ss=float(rate_I_ss),\n",
-    "                I_app_E=float(E.I_app[0] / (amp/meter**2)),\n",
-    "                I_app_I=float(I.I_app[0] / (amp/meter**2)),\n",
-    "                vmax0_mV=vmax0_mV)\n",
-    "    "
+    "from model.model import network\n",
+    "from model.model import UA_PER_CM2_TO_SI "
    ]
   },
   {
@@ -369,18 +75,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "id": "8a3eecb8",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING    Cannot use Cython, a test compilation failed: Microsoft Visual C++ 14.0 or greater is required. Get it with \"Microsoft C++ Build Tools\": https://visualstudio.microsoft.com/visual-cpp-build-tools/ (DistutilsPlatformError) [brian2.codegen.runtime.cython_rt.cython_rt.failed_compile_test]\n",
+      "INFO       Cannot use compiled code, falling back to the numpy code generation target. Note that this will likely be slower than using compiled code. Set the code generation to numpy manually to avoid this message:\n",
+      "prefs.codegen.target = \"numpy\" [brian2.devices.device.codegen_fallback]\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'alpha_EI': 0.3, 'dt': 200.0, 'rate_E_ss': 45.425, 'rate_I_ss': 141.05555555555554, 'vmax0_mV': 19.959983513459797}\n",
-      "{'alpha_EI': 0.2, 'dt': 200.0, 'rate_E_ss': 55.263888888888886, 'rate_I_ss': 107.17777777777778, 'vmax0_mV': 19.956900649597262}\n",
-      "{'alpha_EI': 0.15, 'dt': 200.0, 'rate_E_ss': 62.875, 'rate_I_ss': 80.52222222222221, 'vmax0_mV': 19.99164309824145}\n",
-      "{'alpha_EI': 0.1, 'dt': 200.0, 'rate_E_ss': 74.58333333333333, 'rate_I_ss': 39.34444444444444, 'vmax0_mV': 19.995486619291732}\n"
+      "{'alpha_EI': 0.3, 'dt': 200.0, 'rate_E_ss': 45.425, 'rate_I_ss': 141.05555555555554, 'I_app_E': 0.04, 'I_app_I': 0.0, 'vmax0_mV': 19.959983513459797}\n",
+      "{'alpha_EI': 0.2, 'dt': 200.0, 'rate_E_ss': 55.263888888888886, 'rate_I_ss': 107.17777777777778, 'I_app_E': 0.04, 'I_app_I': 0.0, 'vmax0_mV': 19.956900649597262}\n",
+      "{'alpha_EI': 0.15, 'dt': 200.0, 'rate_E_ss': 62.875, 'rate_I_ss': 80.52222222222221, 'I_app_E': 0.04, 'I_app_I': 0.0, 'vmax0_mV': 19.99164309824145}\n",
+      "{'alpha_EI': 0.1, 'dt': 200.0, 'rate_E_ss': 74.58333333333333, 'rate_I_ss': 39.34444444444444, 'I_app_E': 0.04, 'I_app_I': 0.0, 'vmax0_mV': 19.995486619291732}\n"
      ]
     }
    ],
@@ -406,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "id": "b7d73d01",
    "metadata": {},
    "outputs": [
@@ -414,9 +129,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'alpha_EI': 0.15, 'dt': 20.0, 'rate_E_ss': 63.02222222222222, 'rate_I_ss': 82.82222222222222, 'vmax0_mV': 19.99879770407278}\n",
-      "{'alpha_EI': 0.15, 'dt': 10.0, 'rate_E_ss': 63.019444444444446, 'rate_I_ss': 83.0, 'vmax0_mV': 19.99810280804032}\n",
-      "{'alpha_EI': 0.15, 'dt': 5.0, 'rate_E_ss': 63.03333333333333, 'rate_I_ss': 83.11111111111111, 'vmax0_mV': 19.99979188145056}\n"
+      "{'alpha_EI': 0.15, 'dt': 20.0, 'rate_E_ss': 63.02222222222222, 'rate_I_ss': 82.82222222222222, 'I_app_E': 0.04, 'I_app_I': 0.0, 'vmax0_mV': 19.99879770407278}\n",
+      "{'alpha_EI': 0.15, 'dt': 10.0, 'rate_E_ss': 63.019444444444446, 'rate_I_ss': 83.0, 'I_app_E': 0.04, 'I_app_I': 0.0, 'vmax0_mV': 19.99810280804032}\n",
+      "{'alpha_EI': 0.15, 'dt': 5.0, 'rate_E_ss': 63.03333333333333, 'rate_I_ss': 83.11111111111111, 'I_app_E': 0.04, 'I_app_I': 0.0, 'vmax0_mV': 19.99979188145056}\n"
      ]
     }
    ],
@@ -454,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebf97114",
+   "id": "b3b2ebec",
    "metadata": {},
    "source": [
     "# 1. NMDA Conductance onto Fast-Spiking Interneurons\n",
@@ -474,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "f7c72a49",
    "metadata": {},
    "outputs": [
@@ -497,9 +212,7 @@
     "for g in [0.0, 0.006, 0.012, 0.018, 0.024, 0.054]:\n",
     "    \n",
     "    out = network(alpha_EI=0.15, dt=0.02, rng_seed=4, gNI_mS_cm2=g)\n",
-    "    print(g, out[\"rate_E_ss\"], out[\"rate_I_ss\"], out[\"I_app_I\"])\n",
-    "\n",
-    "\n"
+    "    print(g, out[\"rate_E_ss\"], out[\"rate_I_ss\"], out[\"I_app_I\"])"
    ]
   },
   {
