just added spike count in the return statement

--- a/NMDA conductance and cortical oscillations in schizophrenia/run_model.ipynb
+++ b/NMDA conductance and cortical oscillations in schizophrenia/run_model.ipynb
@@ -37,13 +37,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "0d5b11fb",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import importlib\n",
+    "import model\n",
+    "importlib.reload(model)\n",
     "from model.model import network\n",
-    "from model.model import UA_PER_CM2_TO_SI "
+    "from model.model import UA_PER_CM2_TO_SI, N_E"
    ]
   },
   {
@@ -75,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "8a3eecb8",
    "metadata": {},
    "outputs": [
@@ -92,10 +95,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'alpha_EI': 0.3, 'dt': 200.0, 'rate_E_ss': 45.425, 'rate_I_ss': 141.05555555555554, 'I_app_E': 0.04, 'I_app_I': 0.0, 'vmax0_mV': 19.959983513459797}\n",
-      "{'alpha_EI': 0.2, 'dt': 200.0, 'rate_E_ss': 55.263888888888886, 'rate_I_ss': 107.17777777777778, 'I_app_E': 0.04, 'I_app_I': 0.0, 'vmax0_mV': 19.956900649597262}\n",
-      "{'alpha_EI': 0.15, 'dt': 200.0, 'rate_E_ss': 62.875, 'rate_I_ss': 80.52222222222221, 'I_app_E': 0.04, 'I_app_I': 0.0, 'vmax0_mV': 19.99164309824145}\n",
-      "{'alpha_EI': 0.1, 'dt': 200.0, 'rate_E_ss': 74.58333333333333, 'rate_I_ss': 39.34444444444444, 'I_app_E': 0.04, 'I_app_I': 0.0, 'vmax0_mV': 19.995486619291732}\n"
+      "{'alpha_EI': 0.3, 'dt': 200.0, 'rate_E_ss': 45.425, 'rate_I_ss': 141.05555555555554, 'I_app_E': 0.04, 'I_app_I': 0.0, 'vmax0_mV': 19.959983513459797, 'spE_t': array([0.0134, 0.0134, 0.0134, ..., 1.9992, 1.9992, 1.9992],\n",
+      "      shape=(18516,)), 'spI_t': array([0.0164, 0.0164, 0.0166, ..., 1.9998, 1.9998, 1.9998],\n",
+      "      shape=(13884,))}\n",
+      "{'alpha_EI': 0.2, 'dt': 200.0, 'rate_E_ss': 55.263888888888886, 'rate_I_ss': 107.17777777777778, 'I_app_E': 0.04, 'I_app_I': 0.0, 'vmax0_mV': 19.956900649597262, 'spE_t': array([0.0134, 0.0134, 0.0134, ..., 1.9998, 1.9998, 1.9998],\n",
+      "      shape=(22427,)), 'spI_t': array([0.0172, 0.0174, 0.0174, ..., 1.9994, 1.9996, 1.9998],\n",
+      "      shape=(10539,))}\n",
+      "{'alpha_EI': 0.15, 'dt': 200.0, 'rate_E_ss': 62.875, 'rate_I_ss': 80.52222222222221, 'I_app_E': 0.04, 'I_app_I': 0.0, 'vmax0_mV': 19.99164309824145, 'spE_t': array([0.0134, 0.0134, 0.0134, ..., 1.9996, 1.9996, 1.9998],\n",
+      "      shape=(25438,)), 'spI_t': array([0.0184, 0.0186, 0.0188, ..., 1.9994, 1.9994, 1.9998], shape=(7943,))}\n",
+      "{'alpha_EI': 0.1, 'dt': 200.0, 'rate_E_ss': 74.58333333333333, 'rate_I_ss': 39.34444444444444, 'I_app_E': 0.04, 'I_app_I': 0.0, 'vmax0_mV': 19.995486619291732, 'spE_t': array([0.0134, 0.0134, 0.0134, ..., 1.9994, 1.9996, 1.9998],\n",
+      "      shape=(30162,)), 'spI_t': array([0.0284, 0.0294, 0.031 , ..., 1.9992, 1.9996, 1.9998], shape=(3831,))}\n"
      ]
     }
    ],
