--- a/NMDA conductance and cortical oscillations in schizophrenia/notebooks/run_model.ipynb
+++ b/NMDA conductance and cortical oscillations in schizophrenia/notebooks/run_model.ipynb
@@ -328,11 +328,11 @@
    "id": "ccf05356",
    "metadata": {},
    "source": [
-    "Gamma Frequency\n",
+    "### Gamma Frequency\n",
     "\n",
     "Peak gamma frequency increases monotonically with gNI across all levels of inhibitory drive (Iapp_I). Frequencies shift from ~26–29 Hz at low gNI to ~33–35 Hz at high gNI, remaining within the gamma band. This is consistent with stronger interneuron recruitment shortening the E–I cycle and increasing oscillation frequency.\n",
     "\n",
-    "Gamma Power\n",
+    "### Gamma Power\n",
     "\n",
     "Gamma power exhibits a clear inverted-U dependence on gNI:\n",
     "\n",
@@ -344,7 +344,7 @@
     "\n",
     "This ∩-shaped relationship is robust across Iapp_I values and matches the core result of the paper: NMDA conductance onto interneurons modulates gamma synchrony nonlinearly.\n",
     "\n",
-    "Overall\n",
+    "### Overall\n",
     "\n",
     "The model reproduces the key qualitative findings:\n",
     "\n",
