addedd comments for clarity

--- a/NMDA conductance and cortical oscillations in schizophrenia/notebooks/run_model.ipynb
+++ b/NMDA conductance and cortical oscillations in schizophrenia/notebooks/run_model.ipynb
@@ -104,7 +104,7 @@
     "#  (gg, IappI) combinations\n",
     "tasks = [(g, IappI) for IappI in IappI_values for g in g_values]\n",
     "\n",
-    "# Run in parallel: n_jobs=-1 uses all logical cores\n",
+    "# Run in parallel\n",
     "results = Parallel(n_jobs=-1, backend=\"loky\", verbose=10)(\n",
     "    delayed(run_one_point)(g, IappI, dt_ms, T_ms, rng_seed, alpha_n_per_ms)\n",
     "    for g, IappI in tasks\n",
