cleaned a bit the functions

--- a/NMDA conductance and cortical oscillations in schizophrenia/notebooks/run_model.ipynb
+++ b/NMDA conductance and cortical oscillations in schizophrenia/notebooks/run_model.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "60d720aa",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "dcb3479d",
    "metadata": {},
    "outputs": [
@@ -68,15 +68,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 16 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done   9 tasks      | elapsed:  1.5min\n",
-      "[Parallel(n_jobs=-1)]: Done  18 tasks      | elapsed:  2.5min\n",
-      "[Parallel(n_jobs=-1)]: Done  29 tasks      | elapsed:  2.9min\n",
-      "[Parallel(n_jobs=-1)]: Done  39 out of  63 | elapsed:  4.0min remaining:  2.5min\n",
-      "[Parallel(n_jobs=-1)]: Done  46 out of  63 | elapsed:  4.3min remaining:  1.6min\n",
-      "[Parallel(n_jobs=-1)]: Done  53 out of  63 | elapsed:  5.2min remaining:   58.8s\n",
-      "[Parallel(n_jobs=-1)]: Done  60 out of  63 | elapsed:  5.4min remaining:   16.1s\n",
-      "[Parallel(n_jobs=-1)]: Done  63 out of  63 | elapsed:  5.5min finished\n"
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 16 concurrent workers.\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[14], line 24\u001b[0m\n\u001b[0;32m     21\u001b[0m tasks \u001b[38;5;241m=\u001b[39m [(g, IappI) \u001b[38;5;28;01mfor\u001b[39;00m IappI \u001b[38;5;129;01min\u001b[39;00m IappI_values \u001b[38;5;28;01mfor\u001b[39;00m g \u001b[38;5;129;01min\u001b[39;00m g_values]\n\u001b[0;32m     23\u001b[0m \u001b[38;5;66;03m# Run in parallel\u001b[39;00m\n\u001b[1;32m---> 24\u001b[0m results \u001b[38;5;241m=\u001b[39m \u001b[43mParallel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn_jobs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbackend\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mloky\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mverbose\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m     25\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdelayed\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrun_one_point\u001b[49m\u001b[43m)\u001b[49m\u001b[43m(\u001b[49m\u001b[43mg\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mIappI\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdt_ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mT_ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrng_seed\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43malpha_n_per_ms\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     26\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mg\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mIappI\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mtasks\u001b[49m\n\u001b[0;32m     27\u001b[0m \u001b[43m)\u001b[49m\n\u001b[0;32m     29\u001b[0m \u001b[38;5;66;03m# ----------------------------\u001b[39;00m\n\u001b[0;32m     30\u001b[0m \u001b[38;5;66;03m# Pack results into heatmaps\u001b[39;00m\n\u001b[0;32m     31\u001b[0m \u001b[38;5;66;03m# ----------------------------\u001b[39;00m\n\u001b[0;32m     32\u001b[0m freq_map  \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mfull((\u001b[38;5;28mlen\u001b[39m(IappI_values), \u001b[38;5;28mlen\u001b[39m(g_values)), np\u001b[38;5;241m.\u001b[39mnan, dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mfloat\u001b[39m)\n",
+      "File \u001b[1;32mc:\\programmi_miei\\anaconda\\envs\\pynn-minimal\\lib\\site-packages\\joblib\\parallel.py:2072\u001b[0m, in \u001b[0;36mParallel.__call__\u001b[1;34m(self, iterable)\u001b[0m\n\u001b[0;32m   2066\u001b[0m \u001b[38;5;66;03m# The first item from the output is blank, but it makes the interpreter\u001b[39;00m\n\u001b[0;32m   2067\u001b[0m \u001b[38;5;66;03m# progress until it enters the Try/Except block of the generator and\u001b[39;00m\n\u001b[0;32m   2068\u001b[0m \u001b[38;5;66;03m# reaches the first `yield` statement. This starts the asynchronous\u001b[39;00m\n\u001b[0;32m   2069\u001b[0m \u001b[38;5;66;03m# dispatch of the tasks to the workers.\u001b[39;00m\n\u001b[0;32m   2070\u001b[0m \u001b[38;5;28mnext\u001b[39m(output)\n\u001b[1;32m-> 2072\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m output \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mreturn_generator \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43moutput\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\programmi_miei\\anaconda\\envs\\pynn-minimal\\lib\\site-packages\\joblib\\parallel.py:1682\u001b[0m, in \u001b[0;36mParallel._get_outputs\u001b[1;34m(self, iterator, pre_dispatch)\u001b[0m\n\u001b[0;32m   1679\u001b[0m     \u001b[38;5;28;01myield\u001b[39;00m\n\u001b[0;32m   1681\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backend\u001b[38;5;241m.\u001b[39mretrieval_context():\n\u001b[1;32m-> 1682\u001b[0m         \u001b[38;5;28;01myield from\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_retrieve()\n\u001b[0;32m   1684\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mGeneratorExit\u001b[39;00m:\n\u001b[0;32m   1685\u001b[0m     \u001b[38;5;66;03m# The generator has been garbage collected before being fully\u001b[39;00m\n\u001b[0;32m   1686\u001b[0m     \u001b[38;5;66;03m# consumed. This aborts the remaining tasks if possible and warn\u001b[39;00m\n\u001b[0;32m   1687\u001b[0m     \u001b[38;5;66;03m# the user if necessary.\u001b[39;00m\n\u001b[0;32m   1688\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_exception \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\programmi_miei\\anaconda\\envs\\pynn-minimal\\lib\\site-packages\\joblib\\parallel.py:1800\u001b[0m, in \u001b[0;36mParallel._retrieve\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1789\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mreturn_ordered:\n\u001b[0;32m   1790\u001b[0m     \u001b[38;5;66;03m# Case ordered: wait for completion (or error) of the next job\u001b[39;00m\n\u001b[0;32m   1791\u001b[0m     \u001b[38;5;66;03m# that have been dispatched and not retrieved yet. If no job\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1795\u001b[0m     \u001b[38;5;66;03m# control only have to be done on the amount of time the next\u001b[39;00m\n\u001b[0;32m   1796\u001b[0m     \u001b[38;5;66;03m# dispatched job is pending.\u001b[39;00m\n\u001b[0;32m   1797\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m (nb_jobs \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[0;32m   1798\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_jobs[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mget_status(timeout\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtimeout) \u001b[38;5;241m==\u001b[39m TASK_PENDING\n\u001b[0;32m   1799\u001b[0m     ):\n\u001b[1;32m-> 1800\u001b[0m         \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0.01\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1801\u001b[0m         \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[0;32m   1803\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m nb_jobs \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m   1804\u001b[0m     \u001b[38;5;66;03m# Case unordered: jobs are added to the list of jobs to\u001b[39;00m\n\u001b[0;32m   1805\u001b[0m     \u001b[38;5;66;03m# retrieve `self._jobs` only once completed or in error, which\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1811\u001b[0m     \u001b[38;5;66;03m# timeouts before any other dispatched job has completed and\u001b[39;00m\n\u001b[0;32m   1812\u001b[0m     \u001b[38;5;66;03m# been added to `self._jobs` to be retrieved.\u001b[39;00m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -134,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "5918b61d",
    "metadata": {},
    "outputs": [
@@ -180,15 +186,19 @@
     }
    ],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
     "# ----------------------------\n",
-    "# Plot heatmaps\n",
+    "# Heatmaps\n",
     "# ----------------------------\n",
     "plt.figure()\n",
     "plt.imshow(\n",
     "    power_map,\n",
     "    aspect=\"auto\",\n",
     "    origin=\"lower\",\n",
-    "    extent=[g_values[0], g_values[-1], IappI_values[0], IappI_values[-1]]\n",
+    "    extent=[g_values[0], g_values[-1], IappI_values[0], IappI_values[-1]],\n",
+    "    interpolation=\"nearest\",\n",
     ")\n",
     "plt.colorbar(label=\"Gamma peak power (arb.)\")\n",
     "plt.xlabel(\"gNI (mS/cm²)\")\n",
@@ -201,7 +211,8 @@
     "    freq_map,\n",
     "    aspect=\"auto\",\n",
     "    origin=\"lower\",\n",
-    "    extent=[g_values[0], g_values[-1], IappI_values[0], IappI_values[-1]]\n",
+    "    extent=[g_values[0], g_values[-1], IappI_values[0], IappI_values[-1]],\n",
+    "    interpolation=\"nearest\",\n",
     ")\n",
     "plt.colorbar(label=\"Peak frequency (Hz)\")\n",
     "plt.xlabel(\"gNI (mS/cm²)\")\n",
@@ -209,21 +220,20 @@
     "plt.title(\"Gamma Frequency Heatmap\")\n",
     "plt.show()\n",
     "\n",
-    "\n",
-    "\n",
+    "# ----------------------------\n",
+    "# Line plots: slices at fixed Iapp_I\n",
+    "# ----------------------------\n",
     "cmap = plt.cm.viridis\n",
-    "g_values_plot = np.linspace(0.0, 0.06, power_map.shape[1])\n",
     "\n",
     "plt.figure()\n",
     "for i, IappI in enumerate(IappI_values):\n",
     "    plt.plot(\n",
-    "        g_values_plot,\n",
+    "        g_values,                 # <-- use your actual grid\n",
     "        power_map[i, :],\n",
     "        marker=\"o\",\n",
     "        color=cmap(i / (len(IappI_values) - 1)),\n",
-    "        label=f\"{IappI:.2f}\"\n",
+    "        label=f\"{IappI:.2f}\",\n",
     "    )\n",
-    "\n",
     "plt.legend(title=\"Iapp_I (µA/cm²)\", ncol=2)\n",
     "plt.xlabel(\"gNI (mS/cm²)\")\n",
     "plt.ylabel(\"Gamma peak power (arb.)\")\n",
@@ -231,27 +241,21 @@
     "plt.grid(True, alpha=0.3)\n",
     "plt.show()\n",
     "\n",
-    "\n",
-    "cmap = plt.cm.viridis   # or viridis / plasma / turbo / inferno\n",
-    "\n",
-    "g_values_plot = np.linspace(0.0, 0.06, freq_map.shape[1])  # matches columns\n",
-    "\n",
     "plt.figure()\n",
     "for i, IappI in enumerate(IappI_values):\n",
     "    plt.plot(\n",
-    "        g_values_plot,\n",
-    "        freq_map[i, :],              # <-- frequency row\n",
+    "        g_values,                 # <-- use your actual grid\n",
+    "        freq_map[i, :],\n",
     "        marker=\"o\",\n",
     "        color=cmap(i / (len(IappI_values) - 1)),\n",
-    "        label=f\"{IappI:.2f}\"\n",
+    "        label=f\"{IappI:.2f}\",\n",
     "    )\n",
-    "\n",
     "plt.legend(title=\"Iapp_I (µA/cm²)\", ncol=2)\n",
     "plt.xlabel(\"gNI (mS/cm²)\")\n",
     "plt.ylabel(\"Peak frequency (Hz)\")\n",
     "plt.title(\"Peak gamma frequency vs gNI (color = Iapp_I)\")\n",
     "plt.grid(True, alpha=0.3)\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -399,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d8e1e4e6",
    "metadata": {},
    "outputs": [
@@ -443,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a7aad7c8",
    "metadata": {},
    "outputs": [
@@ -514,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "affa973a",
    "metadata": {},
    "outputs": [
